# churros-builder

./: .env.example  .gitignore  LICENSE  README.md  base_request.py  cli.py  code_generator.py  generation.py  generator.py  index.html  index.ts  main.py  mock_server.py  models.py  package.json  pyproject.toml  repositories.py  requirements.txt  server.py  tsconfig.build.json  tsconfig.json
@template/src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
@template/src/address/application/: dtos.py  errors.py
@template/src/address/domain/: entities.py  repositories.py
@template/src/infra/: models.py
@template/src/infra/repositories/: address.py  product.py
@template/src/infra/schemas/: address.py  product.py
@template/src/product/application/: dtos.py  (+1 more)
code_generator/: main.py  models.py  models_example.py  repositories.py  templates.py
code_generator/application/: __init__.py  dtos.py  errors.py  routers.py
code_generator/common/: templates.py  type_helper.py
code_generator/domain/: entities.py  repositories.py
code_generator/infra/: models.py  repositories.py  routers.py
code_generator/seedwork/: application.py  domain.py
setup/: install-requirements.sh  main.py  part-2.py
src/: constants.ts  defaultFiles.ts  directory.ts  entrypoint.ts  sonarProperties.ts  types.ts
template/: .eslintrc.js  .gitignore  .npmrc  .prettierignore  index-express.ts  index-koa.ts  package.json  sonar-project.properties  tsconfig.json
template/src/app/: middlewares.ts
template/src/infra/: controllers.ts  routers.ts
(+5 files in other folders)
