[tool.poetry]
name = "churros-cli"
version = "0.1.0"
description = ""
authors = ["Gustavo Valle"]
license = "MIT"
readme = "README.md"
packages = [{include = "churros_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^1.10.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
